# CWM

./: .gitignore  Cargo.toml  Makefile  README.md  cwm.desktop  cwm_logged
src/: client.rs  config.rs  connections.rs  desktop_window.rs  error.rs  events.rs  hooks.rs  layers.rs  layout.rs  lib.rs  monitor.rs  panel.rs  rules.rs  tag.rs  utils.rs
src/monitor/: desktop_window.rs  mod.rs  panel.rs
src/new/: events.rs  hooks.rs  mod.rs
src/new/monitor/: desktop_window.rs  mod.rs  panel.rs
src/new/tag/: client.rs  layer.rs  mod.rs  node.rs
src/tag/: client.rs  layer.rs  mod.rs  node.rs
src/window_manager/: events.rs  ipc.rs  mod.rs
src/window_manager/screen/: desktop_window.rs  mod.rs  panel.rs
src/window_manager/screen/tag/: client.rs  layers.rs  layout.rs  mod.rs
struct_args/: Cargo.toml
struct_args/src/: lib.rs
struct_args_derive/: Cargo.toml
struct_args_derive/src/: lib.rs
