[package]
name = "cwm"
version = "0.1.0"
authors = ["Cameron Haigh <cgwhaigh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simplelog = "0.10.0"
log = "0.4"
x11rb = { version = "0.8.1", features = ["randr"] }
