[package]
name = "cwm"
version = "0.1.0"
authors = ["Cameron Haigh <cgwhaigh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simplelog = "0.10.0"
log = "0.4"
nix = "0.22"
x11rb = { version = "0.9", features = ["randr", "shape"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
clap = "2.33.3"
structopt = "0.3"
anyhow = "1.0"
struct_args = { path = "struct_args" }